# GRIEF-DE

./: .gitignore  CMakeLists.txt  DE.cc  DE.h  Makefile  NArray.cc  NArray.h  a  all  download_exp_data.sh  evolve_grief  fitness  generate_code.py  generated_32.i  generated_64.i  grief  grief.cc  grief.h  log  main.cc  main.cu  notas.txt  plot_data.py  run.sh  test.cc  test_description.txt  teste.py  teste.sh  teste_grief.cc  todo.md
DE/: DE copy.cc  DE.cc  DE.h  a  t  test_dist.cc
GRIEF/: generate_code.py  generated_16.i  grief.cc  grief.h
GRIEF_CUDA/: generated_16.i  generated_32.i  generated_64.i  grief.cu  grief.h
QS/: CMakeLists.txt  qs_teste.cc  quicksort.cc  quicksort.h
algebra/: NArray.cc  NArray.h
best_inds/: 13.txt  15.txt  16.txt  17.txt  18.txt  21.txt  22.txt  23.txt  24.txt  25.txt  28.txt  29.txt  3.txt  4.txt  6.txt  8.txt  9.txt
examples/: Makefile  all  convergence_test.cc  macros_teste  macros_teste.cc  teste  teste.cc
indvs/: example0.txt  example1.txt  example10.txt  example11.txt  example12.txt  example13.txt  example14.txt  example16.txt  example17.txt  example18.txt  example20.txt  example21.txt  example22.txt  example23.txt  example25.txt  example26.txt  example29.txt  example3.txt  example31.txt  example33.txt  example34.txt  example36.txt  example38.txt  example39.txt  example4.txt  example42.txt  example43.txt  example45.txt  example46.txt  example47.txt  example49.txt  example5.txt  example50.txt  example51.txt  example52.txt  example54.txt  example55.txt  example58.txt  example6.txt  example61.txt  (+27 more)
local_tests/: macros_teste.cc  min_max  min_max.cc  rndm  (+5 more)
(+187 files in other folders)
